# libdemos

./: .clang-format  .gitignore  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  build.sh  eslint.config.mjs  jest.config.json  package-lock.json  package.json  rollup.config.ts  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: release.yml  security.yml  test.yml
__tests__/: CMakeLists.txt  commit.test.c  commitment.test.ts  crypto.test.c  encrypt.test.ts  merkle.test.c  merkle.test.ts  shamir.test.c  shamir.test.ts  sign.test.ts  test.c
examples/browser/: index.html
include/: dcommitt.h  demos.h
scripts/: compileMethods.js  demosMethodsModule.d.ts  emscripten.js  libdemos.d.ts  paths.js  postBuild.cjs  utils.js
src/: commit.c  commit_details.c  commitment_update.c  dcommitt.c  demos.c  demos.h  identities.c  index.ts  proof.c  verify.c
src/chacha20poly1305/: chacha20poly1305.c  chacha20poly1305.h  decrypt.c  decrypt_asymmetric.c  decrypt_symmetric.c  encrypt.c  encrypt_asymmetric.c  encrypt_symmetric.c
src/commitment/: commit.ts  generateIdentities.ts  generateProof.ts  index.ts  memory.ts  verifyProof.ts
src/identities/: deserialize.c  free.c  identities.c  identities.h  new.c  populate.c
src/merkle/: getMerkleProof.ts  getMerkleRoot.ts  getMerkleRootFromProof.ts  get_merkle_proof.c  get_merkle_root.c  get_merkle_root_from_proof.c  merkle.c  verifyMerkleProof.ts  verify_merkle_proof.c
src/proof/: deserialize.c  free.c  populate.c  proof.c  proof.h  verify.c
src/shamir/: polynomial.c  restoreSecret.ts  restore_secret.c  ring.c  shamir.c  shamir.h  splitSecret.ts  split_secret.c  split_secret_with_randomness.c
src/utils/: argon2.c  argon2.ts  arrayRandomShuffle.ts  arrayRandomSubset.ts  calculate_nonce.c  calculate_proof_len.c  constants.ts  decryptAsymmetric.ts  decryptSymmetric.ts  deserialize.ts  ed25519.c  encryptAsymmetric.ts  encryptSymmetric.ts  generateMnemonic.ts  index.ts  interfaces.ts  isUint8Array.ts  items_indexes_in_array.c  keyPair.ts  keyPairFromMnemonic.ts  memory.ts  memoryLenToPages.ts  numberToUint8Array.ts  number_to_uint8_array.c  randomBytes.ts  randomNumberInRange.ts  random_bytes.c  random_number_in_range.c  serialize.ts  sha512.c  sha512.ts  sign.ts  uint256.c  uint256.h  uint8ArrayToNumber.ts  uint8_array_to_number.c  utils.c  utils.h  validateMnemonic.ts  verify.ts
wasm/: libdemos.d.ts  libdemos.js
wasm/browser/: libdemos.js
wasm/node/: libdemos.js  libdemos.wasm
